profile page image stretch fix

--- a/assets/css/user_profile.css
+++ b/assets/css/user_profile.css
@@ -33,6 +33,7 @@ body {
         body #desktop-profile #top-div #top-middle #profile-pic img {
           border: solid #242526 5px;
           height: 170px;
+          width: 170px;
           object-fit: cover; }
       body #desktop-profile #top-div #top-middle #name {
         position: absolute;
